--- a/home.html
+++ b/home.html
@@ -3,11 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <title>Typing Test</title>
+      <link rel="stylesheet" type="text/css" href="style.css">
+      <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600&display=swap" rel="stylesheet">
   </head>
   <body>
       <header>
-      <p class="title">Typing Test</p>
+      <img class="title" alt="Typing Test" src="images/headerpic-svg.svg"/>
       </header>
       <p class="instr">Instructions: Words will appear for you to type. After typing each word, press "Enter". The timer will begin when you start typing.</p>
+<!-- countdown timer html -->
+      <div class="timer">
+
+      </div>
+<!-- random word generator html -->
+      <div class="words">
+
+      </div>
+<!-- user input -->
+      <div>
+        
+      </div>
   </body>
 </html>
