--- a/home.html
+++ b/home.html
@@ -7,26 +7,29 @@
       <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600&display=swap" rel="stylesheet">
   </head>
   <body>
-      <header id="head" class="myStyle">
+      <header id="head">
       <img class="title" alt="Typing Test" src="images/headerpic-svg.svg"/>
+    <hr>
       </header>
-      <p id="instr">Instructions: Words will appear for you to type. After typing each word, press "Enter". The timer will begin when you start typing.</p>
+<!-- main -->
+    <div class="main-container"><br>
+      <p id="instr">Instructions: Type the words you see! The timer will begin when you start typing.</p>
 <!-- countdown timer html -->
       <div>
         <span id="timer"></span>
         <br>
-        <button type="button" id="testbutt">change header color!</button>
         <button type="button" id="optimism">start timer</button>
       </div>
-
 <!-- random word generator html -->
       <div class="words">
 
       </div>
 <!-- user input -->
       <div>
-
+        <br>
+      <input type="text" size="40" placeholder="start typing here"></input>
       </div>
+    </div>
       <footer>
         <script src="wpm.js"></script>
       </footer>
