--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <title>Typing Test</title>
       <link rel="stylesheet" type="text/css" href="style.css">
       <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600&display=swap" rel="stylesheet">
+      <link rel="shortcut icon" href="images/favicon.svg" />
   </head>
   <body>
       <header id="head">
@@ -22,12 +23,12 @@
       </div>
 <!-- random word generator html -->
       <div class="words">
-
+        <span id="r-words"></span>
       </div>
 <!-- user input -->
       <div>
         <br>
-      <input type="text" size="40" placeholder="start typing here"></input>
+      <input type="text" size="40" placeholder="start typing here" id="textbox"></input>
       </div>
     </div>
       <footer>
