everything except displaying the results

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
       </header>
 <!-- main -->
     <div class="main-container"><br>
-      <p id="instr">Instructions: Type the words you see! You must get the practice word right to start the timer.</p>
+      <p id="instr">Instructions: Type the words you see. The timer will begin when you see the word "go!"</p>
 <!-- countdown timer html -->
       <div>
         <span id="timer"></span>
@@ -31,12 +31,8 @@
       <input type="text" size="40" placeholder="start typing here" id="textbox"></input>
       </div>
 
-      <div class="results hideme" id="someshow">
-        <p>Congrats, you made it! You typed </p>
-          <span id="totalWords"></span>
-        <p> in one minute! Your accuracy was </p>
-          <span id="accuracy"></span>
-        <p>%!</p>
+      <div class="results" >
+        <p id="someshow"></p>
       </div>
 
     </div>
